--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
           uri: http://localhost:8082
           predicates:
             - Path=/worlds/**, 
+        - id: helloworld
+          uri: http://localhost:8083
+          predicates:
+            - Path=, 
         - id: frontend
           uri: http://localhost:8080
           predicates:
@@ -47,6 +51,10 @@ spring:
           uri: http://outHello:8080
           predicates:
             - Path=/worlds/**, 
+        - id: helloworld
+          uri: http://helloworld:8080
+          predicates:
+            - Path=, 
         - id: frontend
           uri: http://frontend:8080
           predicates:
